# SHIPPING-COSTS

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
.claude/: .gitignore
.claude/commands/: compare-fedex.md  review-config.md  run-scenarios.md
analysis/US_2026_tenders/: AUDIT_PROMPT.md  README.md
carriers/: __init__.py
carriers/.claude/: settings.local.json
carriers/dpd_uk/: SOURCES.md
carriers/fedex/: 2026_RATE_CARD_ANALYSIS.md  INVESTIGATION_2026_UPDATE.md  RATE_INCREASE_ANALYSIS.md  README.md  __init__.py  analyze_rate_increase.py  analyze_rate_variation.py  calculate_costs.py  final_rate_increase_report.py  investigate_base_rates.py  summary.txt  version.py
carriers/maersk_us/: __init__.py  calculate_costs.py  version.py
carriers/ontrac/: README.md  __init__.py  calculate_costs.py  version.py
carriers/p2p_us/: README.md  __init__.py  calculate_costs.py
carriers/p2p_us2/: __init__.py  calculate_costs.py  version.py
carriers/usps/: COMPARISON.md  IMPLEMENTATION_PLAN.md  README.md  __init__.py  calculate_costs.py  calculation_logic.md  version.py
ontrac/: README.md  calculate_costs.py  ontrac-calculator.html  pipeline.py  version.py
ontrac/core/: __init__.py  calculate.py  inputs.py
ontrac/data/: __init__.py  billable_weight.py
ontrac/loaders/: __init__.py  pcs.py
ontrac/maintenance/: README.md  generate_zones.py
ontrac/pipeline/: __init__.py  calculate.py  columns.py  load_inputs.py  load_pcs_shipments.py  supplement.py  (+1 more)
shared/: __init__.py
tests/: debug_period.py  run_pipeline.py  test_calculate_costs.py  test_pipeline.py
(+392 files in other folders)
